Fixed the mobile filterToggle
Was overlapping the search bar so I increased the size that it's reduced
by, but now it's not overlapping anything so it can be returned to
normal (minus the extra 10px that I'm not sure why exists...).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,7 +393,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: calc(100% - 25px);
+    width: calc(100% - 10px);
     background-color: #2265b1;
     padding: 0 5px;
     color: white;
